--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,25 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
 </dependency>
+	<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		        <version>4.13</version>
+		    
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		        <version>3.3.3</version>
+		    <scope>test</scope>
+		</dependency>
+	<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-inline</artifactId>
+    <version>3.3.3</version>
+    <scope>test</scope>
+</dependency>
     
 	</dependencies>
 
