--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -36,13 +36,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
+			<scope>test</scope>			
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -67,6 +61,25 @@
     <groupId>log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
+</dependency>
+	<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		        <version>4.13</version>
+		    
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		        <version>3.3.3</version>
+		    <scope>test</scope>
+		</dependency>
+	<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-inline</artifactId>
+    <version>3.3.3</version>
+    <scope>test</scope>
 </dependency>
     
 	</dependencies>
