Coded for review comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.port=8080
 mysql.driver=com.mysql.cj.jdbc.Driver
 mysql.jdbcUrl=jdbc:mysql://localhost:3306/guestbook
 mysql.username=user1
-mysql.password=mysql
+#mysql.password=mysql
+mysql.password=ENC(vwYbyFQn6W3ZwcX5jxpTCA==)
 
 spring.mvc.view.prefix: /jsp/
 spring.mvc.view.suffix: .jsp
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
