--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,19 @@
         <artifactId>tomcat-embed-jasper</artifactId>
     </dependency>
     <dependency>
-    <groupId>log4j</groupId>
-    <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
-</dependency>
+	    <groupId>com.github.ulisesbocchio</groupId>
+	    <artifactId>jasypt-spring-boot-starter</artifactId>
+	    <version>2.0.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.13.3</version>
+	</dependency>
 	<dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
-		        <version>4.13</version>
+		    <version>4.13</version>
 		    
 		    <scope>test</scope>
 		</dependency>
@@ -81,10 +86,16 @@
     <version>3.3.3</version>
     <scope>test</scope>
 </dependency>
+
+<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-devtools</artifactId>
+	</dependency>
     
 	</dependencies>
 
 	<build>
+		<defaultGoal>clean install</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
