--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 
 server.port=8080
 
-mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.jdbcUrl=jdbc:mysql://localhost:3306/guestbook
-mysql.username=user1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/guestbook
+db.usr.key=user1
 #mysql.password=mysql
-mysql.password=ENC(vwYbyFQn6W3ZwcX5jxpTCA==)
-
+db.pwd.key=ENC(vwYbyFQn6W3ZwcX5jxpTCA==)
+db.secretkey=guestbook
 spring.mvc.view.prefix: /jsp/
 spring.mvc.view.suffix: .jsp
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+logging.level.com.app.guestbook=DEBUG
